--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=MyVolunteer-api
 
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sbDb
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/sbDb
+spring.datasource.username=postgres
+spring.datasource.password=0000
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
